unpackaged/main/default/objects/Contact/fields/Contact_Profile__c.field-meta.xml
<CustomField>
    <fullName>Contact_Profile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Profile</label>
    <type>Text</type>
</CustomField>