unpackaged/main/default/objects/Contact/fields/Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Source__c</fullName>
    <label>Contact Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>