unpackaged/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INQ</fullName>
            </value>
            <value>
                <fullName>AQL</fullName>
            </value>
            <value>
                <fullName>TAL</fullName>
            </value>
            <value>
                <fullName>Qualifying</fullName>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>