unpackaged/main/default/objects/Contact/fields/Contact_Status_AQL_Time__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status_AQL_Time__c</fullName>
    <label>Contact Status AQL Time</label>
    <type>DateTime</type>
</CustomField>