unpackaged/main/default/objects/Contact/fields/Contact_Status_MQL_Time__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status_MQL_Time__c</fullName>
    <label>Contact Status MQL Time</label>
    <type>DateTime</type>
</CustomField>