unpackaged/main/default/objects/Contact/fields/Contact_Status_TAL_Time__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status_TAL_Time__c</fullName>
    <label>TAL Date</label>
    <type>DateTime</type>
</CustomField>