unpackaged/main/default/objects/Contact/fields/Contact_Status_Time__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status_Time__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Status Time</label>
    <type>DateTime</type>
</CustomField>