unpackaged/main/default/objects/Contact/fields/Contact_Working__c.field-meta.xml
<CustomField>
    <fullName>Contact_Working__c</fullName>
    <formula>DATETIMEVALUE(Contact_Status_MQL_Time__c) - DATETIMEVALUE(Contact_Status_TAL_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Working</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>