unpackaged/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Performance &amp; Reliability Engineer</fullName>
            </value>
            <value>
                <fullName>Operation &amp; Maintenance</fullName>
            </value>
            <value>
                <fullName>IT, OT &amp; Digital Services</fullName>
            </value>
            <value>
                <fullName>Executive Team</fullName>
            </value>
            <value>
                <fullName>Procurement, Legal, Accounting &amp; Admin.</fullName>
            </value>
            <value>
                <fullName>Construction &amp; Project Management</fullName>
            </value>
            <value>
                <fullName>Design Engineering &amp; Resource Assessment</fullName>
            </value>
            <value>
                <fullName>Sales, Business Development &amp; Account Management</fullName>
            </value>
            <value>
                <fullName>Warranty Services &amp; Engineering</fullName>
            </value>
            <value>
                <fullName>Education, Media, Investor &amp; Misc Consultant</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>