unpackaged/main/default/objects/Contact/fields/Duration_AQL_to_TAL__c.field-meta.xml
<CustomField>
    <fullName>Duration_AQL_to_TAL__c</fullName>
    <formula>(DATETIMEVALUE(Contact_Status_TAL_Time__c) - DATETIMEVALUE(Contact_Status_AQL_Time__c))*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration AQL to TAL(Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>