unpackaged/main/default/objects/Contact/fields/Legacy_PF_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_PF_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy PF Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>