unpackaged/main/default/objects/Contact/fields/Source_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Source_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>REQ-2361</description>
    <label>Source Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>