unpackaged/main/default/objects/Contact/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitors</fullName>
                <label>Competitor</label>
            </value>
            <value>
                <fullName>Person not responsive</fullName>
            </value>
            <value>
                <fullName>We don’t have the right product</fullName>
            </value>
            <value>
                <fullName>No operational assets any time soon</fullName>
            </value>
            <value>
                <fullName>Not right geography</fullName>
            </value>
            <value>
                <fullName>Seniority level</fullName>
            </value>
            <value>
                <fullName>Opportunity open w/ other contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>