unpackaged/main/default/objects/Contact/fields/Support_Contact__c.field-meta.xml
<CustomField>
    <fullName>Support_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support Contact</label>
    <type>Checkbox</type>
</CustomField>