unpackaged/main/default/objects/Contact/validationRules/First_Last_Name_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Last_Name_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FirstName) || ISBLANK(LastName)</errorConditionFormula>
    <errorMessage>Please enter First Name and Last Name</errorMessage>
</ValidationRule>