unpackaged/main/default/objects/Contact/validationRules/Freeze_Inactive_Response.validationRule-meta.xml
<ValidationRule>
    <fullName>Freeze_Inactive_Response</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  Active__c  ,true) &amp;&amp;   
NOT(
ISBLANK(TEXT( Inactive_Reason__c )))</errorConditionFormula>
    <errorDisplayField>Inactive_Reason__c</errorDisplayField>
    <errorMessage>Can&#39;t be saved because Active is check.</errorMessage>
</ValidationRule>