unpackaged/main/default/objects/Contact/validationRules/Source_Cmpn_Req_If_Email_Opt_Tick_Contac.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_Cmpn_Req_If_Email_Opt_Tick_Contac</fullName>
    <active>true</active>
    <description>REQ-2361</description>
    <errorConditionFormula>IF( Email_Opt_In__c = True , ( Source_Campaign__c = NULL ),
False)</errorConditionFormula>
    <errorDisplayField>Source_Campaign__c</errorDisplayField>
    <errorMessage>Source Campaign field is mandatory.</errorMessage>
</ValidationRule>