unpackaged/main/default/objects/Contact/validationRules/Validate_Inactive_Response.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Inactive_Response</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 Active__c = FALSE,
 ISBLANK( TEXT( Inactive_Reason__c ) ) 
)</errorConditionFormula>
    <errorDisplayField>Inactive_Reason__c</errorDisplayField>
    <errorMessage>Update the Inactive Reason</errorMessage>
</ValidationRule>