unpackaged/main/default/objects/Contact/listViews/Migrated_Contacts.listView-meta.xml
<ListView>
    <fullName>Migrated_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>akuma</value>
    </filters>
    <label>All Migrated Contacts</label>
</ListView>